--- a/index.html
+++ b/index.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MMR Scraper</title>
-  </head>
-  <body>
-    <form>
-      <label for="username">Username:</label><br>
-      <input type="text" id="username" name="username"><br>
-      <input type="button" value="Submit" onclick="getMMR()">
+    <title>MMR OBS Overlay</title>
+	<style>
+		@font-face {
+			font-family: 'DS-FONT';
+			src: url("https://www.dafont.com/digital-7.font");
+		}
+		div {
+			font-family: 'DS-FONT';
+			font-size: 64px; 
+		}
+	</style>
+  	</head>
+  	<body>
+	<div id="output">
+		<img id="mmr-rank" src="">
+		<p id = "mmr-output"></p>
+	</div>
+	
+	<form>
+    	<label for="username">Username:</label><br>
+    	<input type="text" id="username" name="username"><br>
+    	<input type="button" value="Submit" onclick="getMMR()">
     </form> 
     <br>
-    <div id="output"></div>
-	<img id="mmr-rank" src="">
-    <script>
-      function getMMR() {
-        const username = document.getElementById('username').value;
-        const url = `https://mk8dx-lounge.com/api/player?name=${username}`;
-        fetch(url)
-          .then(response => response.json())
-          .then(data => {
-            const mmr = data.mmr;
-            document.getElementById('output').innerHTML = `MMR of ${username}: ${mmr}`;
-			// Display rank icon, icon links from 150cc discord
-			// Iron
-			if(mmr < 2000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
-			}
-			// Bronze
-			else if(mmr >= 2000 && mmr < 4000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
-			}
-			// Silver
-			else if(mmr >= 4000 && mmr < 6000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
-			}
-			// Gold
-			else if(mmr >= 6000 && mmr < 8000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
-			}
-			// Platin
-			else if(mmr >= 8000 && mmr < 10000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
-			}
-			// Sapphire
-			else if(mmr >= 10000 && mmr < 12000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
-			}
-			// Ruby
-			else if(mmr >= 12000 && mmr < 14000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
-			}
-			// Diamond
-			else if(mmr >= 14000 && mmr < 16000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
-			}
-			// Master
-			else if(mmr >= 16000 && mmr < 17000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
-			}
-			// Grandmaster
-			else if(mmr >= 17000) {
-				document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
-			}
 
-          });
-      }
-    </script>
-  </body>
+    <script>
+    	function getMMR() {
+			const username = document.getElementById('username').value;
+			const url = `https://mk8dx-lounge.com/api/player?name=${username}`;
+			fetch(url)
+			.then(response => response.json())
+			.then(data => {
+				const mmr = data.mmr;
+				document.getElementById('mmr-output').innerHTML = `${mmr}`;
+				// Display rank icon, icon links from 150cc discord
+				// Iron
+				if(mmr < 2000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
+				}
+				// Bronze
+				else if(mmr >= 2000 && mmr < 4000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
+				}
+				// Silver
+				else if(mmr >= 4000 && mmr < 6000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
+				}
+				// Gold
+				else if(mmr >= 6000 && mmr < 8000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
+				}
+				// Platin
+				else if(mmr >= 8000 && mmr < 10000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
+				}
+				// Sapphire
+				else if(mmr >= 10000 && mmr < 12000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
+				}
+				// Ruby
+				else if(mmr >= 12000 && mmr < 14000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
+				}
+				// Diamond
+				else if(mmr >= 14000 && mmr < 16000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
+				}
+				// Master
+				else if(mmr >= 16000 && mmr < 17000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
+				}
+				// Grandmaster
+				else if(mmr >= 17000) {
+					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
+				}
+
+			});
+		}
+    	</script>
+  	</body>
 </html>
