--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		@font-face {
 			font-family: 'DS-FONT';
-			src: url("https://www.1001fonts.com/download_font.php?fid=86977");
+			src: url(./fonts/digital-7.ttf);
 		}
 		div {
 			font-family: 'DS-FONT';
