--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		p#mmr-output {
 			font-family: 'DS-FONT';
 			font-size: 80px; 
-			color: white;
 			display: table-cell;
 			vertical-align: middle;
 			background-color: rgba(0,0,0,0.1);
@@ -39,7 +38,7 @@
 	<div id="output">
 		<img id="mmr-rank" src="https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless">
 		<p class="filler">Fill the text for nothing POG</p>
-		<p id ="mmr-output">Undefined</p>
+		<p class="mmr-output" id ="mmr-output">NULL</p>
 		<p class="filler">Fill the next for nothing POG</p>
 	</div>
 	
@@ -56,76 +55,77 @@
     <script>
     	function getMMR() {
 			const username = encodeURIComponent(document.getElementById('username').value);
-			const url = `https://mk8dx-lounge.com/api/player?name=${username}`;
+			const url = `https://api.allorigins.win/get?url=${encodeURIComponent(`https://mk8dx-lounge.com/api/player?name=${username}`)}`;
 			fetch(url)
 			.then(response => response.json())
 			.then(data => {
 				const mmr = data.mmr;
 				document.getElementById('mmr-output').innerHTML = `${mmr}`;
 
-				let color;
+				const Fontcolor = 'white';
 				
 				// Display rank icon, icon links from 150cc discord
 				// Iron
 				if(mmr < 2000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
-					color = rgba(128,120,120,255);
+					Fontcolor = '#807878';
+					document.getElementById('mmr-output').innerHTML.style.color='black';
 				}
 				// Bronze
 				else if(mmr >= 2000 && mmr < 4000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
-					color = rgba(206,60,3,255);
+					document.getElementById('mmr-output').innerHTML.style.color='yellow';
 				}
 
 				// Silver
 				else if(mmr >= 4000 && mmr < 6000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
-					color = rgba(181,181,183,255);
+					Fontcolor = '#b5b5b7';
 				}
 				// Gold
 				else if(mmr >= 6000 && mmr < 8000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
-					color = rgba(234,176,78,255);
+					Fontcolor = '#eab04e';
 				}
 				// Platin
 				else if(mmr >= 8000 && mmr < 10000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
-					color = rgba(4,82,99,255);
+					Fontcolor = '#045263';
 				}
 				// Sapphire
 				else if(mmr >= 10000 && mmr < 12000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
-					color = rgba(42,108,206,255);
+					Fontcolor = '#2a6cce';
 				}
 				// Ruby
 				else if(mmr >= 12000 && mmr < 14000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
-					color = rgba(211,28,95,255);
+					Fontcolor = '#d31c5f';
 				}
 				// Diamond
 				else if(mmr >= 14000 && mmr < 16000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
-					color = rgba(5,160,195,255);
+					color = '#05a0c3';
 				}
 				// Master
 				else if(mmr >= 16000 && mmr < 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
-					color = rgba(189,204,218,255);
+					Fontcolor = '#bdccda';
 				}
 				// Grandmaster
 				else if(mmr >= 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
-					color = rgba(131,12,44,255);
+					Fontcolor = '#830c2c';
 				}
 				else {
 					document.getElementById('mmr-rank').src = "https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless";
-					color = rgba(255,255,255,255);
+					Fontcolor = 'white';
 				}
 			});
 			if (document.getElementById('custom-color').checked) {
-				document.getElementById('mmr-output').style.color = color;
+				document.getElementById('mmr-output').style.color = Fontcolor;
 			} else {
-				document.getElementById('mmr-output').style.color = rgba(255,255,255,255);
+				document.getElementById('mmr-output').style.color = 'white';
 			}
 
 		}
