--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 		p#mmr-output {
 			font-family: 'DS-FONT';
 			font-size: 80px; 
+			color: 'white';
 			display: table-cell;
 			vertical-align: middle;
-			background-color: rgba(0,0,0,0.6);
+			background-color: rgba(0,0,0,0.69);
 		}
 		p.filler {
 			padding: 4px;
