--- a/index.html
+++ b/index.html
@@ -62,72 +62,70 @@
 			.then(data => {
 				const mmr = data.mmr;
 				document.getElementById('mmr-output').innerHTML = `${mmr}`;
-
-				const Fontcolor = 'white';
 				
 				// Display rank icon, icon links from 150cc discord
 				// Iron
 				if(mmr < 2000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
-					Fontcolor = '#807878';
-					document.getElementById('mmr-output').innerHTML.style.color='black';
+					//Fontcolor = '#807878';
+					//document.getElementById('mmr-output').innerHTML.style.color='black';
 				}
 				// Bronze
 				else if(mmr >= 2000 && mmr < 4000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
-					document.getElementById('mmr-output').innerHTML.style.color='yellow';
+					//document.getElementById('mmr-output').innerHTML.style.color='yellow';
 				}
 
 				// Silver
 				else if(mmr >= 4000 && mmr < 6000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
-					Fontcolor = '#b5b5b7';
+					//Fontcolor = '#b5b5b7';
 				}
 				// Gold
 				else if(mmr >= 6000 && mmr < 8000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
-					Fontcolor = '#eab04e';
+					//Fontcolor = '#eab04e';
 				}
 				// Platin
 				else if(mmr >= 8000 && mmr < 10000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
-					Fontcolor = '#045263';
+					//Fontcolor = '#045263';
 				}
 				// Sapphire
 				else if(mmr >= 10000 && mmr < 12000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
-					Fontcolor = '#2a6cce';
+					//Fontcolor = '#2a6cce';
 				}
 				// Ruby
 				else if(mmr >= 12000 && mmr < 14000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
-					Fontcolor = '#d31c5f';
+					//Fontcolor = '#d31c5f';
 				}
 				// Diamond
 				else if(mmr >= 14000 && mmr < 16000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
-					color = '#05a0c3';
+					//Fontcolor = '#05a0c3';
 				}
 				// Master
 				else if(mmr >= 16000 && mmr < 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
-					Fontcolor = '#bdccda';
+					//Fontcolor = '#bdccda';
 				}
 				// Grandmaster
 				else if(mmr >= 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
-					Fontcolor = '#830c2c';
+					//Fontcolor = '#830c2c';
 				}
 				else {
 					document.getElementById('mmr-rank').src = "https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless";
-					Fontcolor = 'white';
+					//Fontcolor = 'white';
 				}
 			});
-			if (document.getElementById('custom-color').checked) {
+			/* if (document.getElementById('custom-color').checked) {
 				document.getElementById('mmr-output').style.color = Fontcolor;
 			} else {
 				document.getElementById('mmr-output').style.color = 'white';
-			}
+			} */
 
 		}
     	</script>
