--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		p#mmr-output {
 			font-family: 'DS-FONT';
 			font-size: 80px; 
-			color: 'white';
+			color: rgba(255, 255, 255, 1);
 			display: table-cell;
 			vertical-align: middle;
 			background-color: rgba(0,0,0,0.69);
@@ -39,7 +39,7 @@
 	<div id="output">
 		<img id="mmr-rank" src="https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless">
 		<p class="filler">Fill the text for nothing POG</p>
-		<p class="mmr-output" id ="mmr-output">NULL</p>
+		<p id ="mmr-output">NULL</p>
 		<p class="filler">Fill the next for nothing POG</p>
 	</div>
 	
