--- a/index.html
+++ b/index.html
@@ -46,92 +46,108 @@
 	<form>
     	<label for="username">Username:</label><br>
     	<input type="text" id="username" name="username"><br>
-		<input type="radio" name="color" id="standard-color" value="white" onchange="updateColor()" checked>
+		<input type="radio" name="color" id="standard-color" value="white" checked>
 		
 		<label for="standard-color">Standard color (white)</label><br>
-		<input type="radio" name="color" id="custom-color" value="red" onchange="updateColor()">
+		<input type="radio" name="color" id="custom-color" value="red">
 		<label for="custom-color">Custom color</label><br>
     	<input type="button" value="Submit" onclick="getMMR()">
     </form> 
     <script>
     	function getMMR() {
 			const username = encodeURIComponent(document.getElementById('username').value);
-			const url = `https://proxy.cors.sh/https://mk8dx-lounge.com/api/player?name=${username}`;
-			fetch(url,{
+			const encodedParams = new URLSearchParams();
+			encodedParams.append("my-url", `https://mk8dx-lounge.com/api/player?name=${username}`)
+			const url = 'https://cors-proxy3.p.rapidapi.com/api';
+			const options = {
+				method: 'POST',
 				headers: {
-					'Access-Control-Allow-Origin': '*'
-				}
-			})
+					'content-type': 'application/x-www-form-urlencoded',
+					'X-RapidAPI-Key': '3dfaeeb34emshc7b3f58a452a7cfp157c13jsn95578f4b02bf',
+					'X-RapidAPI-Host': 'cors-proxy3.p.rapidapi.com'
+				},
+				body: encodedParams
+			};
+			fetch(url, options)
 			.then(response => response.json())
 			.then(data => {
 				const mmr = data.mmr;
-				document.getElementById('mmr-output').innerHTML = `${mmr}`;
-				
+				// Standart Color
+				let Fontcolor = '#FFFFFF';
 				// Display rank icon, icon links from 150cc discord
 				// Iron
 				if(mmr < 2000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
-					//Fontcolor = '#807878';
-					//document.getElementById('mmr-output').innerHTML.style.color='black';
+					Fontcolor = '#807878';
 				}
 				// Bronze
 				else if(mmr >= 2000 && mmr < 4000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
-					//document.getElementById('mmr-output').innerHTML.style.color='yellow';
+					Fontcolor = '#a83808'
 				}
 
 				// Silver
 				else if(mmr >= 4000 && mmr < 6000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
-					//Fontcolor = '#b5b5b7';
+					Fontcolor = '#b5b5b7';
 				}
 				// Gold
 				else if(mmr >= 6000 && mmr < 8000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
-					//Fontcolor = '#eab04e';
+					Fontcolor = '#eab04e';
 				}
 				// Platin
 				else if(mmr >= 8000 && mmr < 10000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
-					//Fontcolor = '#045263';
+					Fontcolor = '#045263';
 				}
 				// Sapphire
 				else if(mmr >= 10000 && mmr < 12000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
-					//Fontcolor = '#2a6cce';
+					Fontcolor = '#2a6cce';
 				}
 				// Ruby
 				else if(mmr >= 12000 && mmr < 14000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
-					//Fontcolor = '#d31c5f';
+					Fontcolor = '#d31c5f';
 				}
 				// Diamond
 				else if(mmr >= 14000 && mmr < 16000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
-					//Fontcolor = '#05a0c3';
+					Fontcolor = '#05a0c3';
 				}
 				// Master
 				else if(mmr >= 16000 && mmr < 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
-					//Fontcolor = '#bdccda';
+					Fontcolor = '#bdccda';
 				}
 				// Grandmaster
 				else if(mmr >= 17000) {
 					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
-					//Fontcolor = '#830c2c';
+					Fontcolor = '#830c2c';
 				}
+				// if not found
 				else {
 					document.getElementById('mmr-rank').src = "https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless";
-					//Fontcolor = 'white';
+					Fontcolor = 'white';
 				}
-			});
-			/* if (document.getElementById('custom-color').checked) {
-				document.getElementById('mmr-output').style.color = Fontcolor;
-			} else {
-				document.getElementById('mmr-output').style.color = 'white';
-			} */
 
+				if (document.getElementById('custom-color').checked) {
+					document.getElementById('mmr-output').style.color = Fontcolor;
+				} else {
+					document.getElementById('mmr-output').style.color = '#ffffff';
+				}
+				document.getElementById('mmr-output').innerHTML = `${mmr}`;
+			});
+			document.getElementById('username').addEventListener('Submit', function(event){
+			event.preventDefault();
+			localStorage.setItem('usernameValue', document.getElementById('username').value);
+			});
+			document.addEventListener('DOMContentLoaded', function(){
+				document.getElementById('username').value = localStorage.getItem('usernameValue');
+			});
 		}
+		
     	</script>
   	</body>
 </html>
