--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		}
 
 		function getMMR() {
+			
 			const username = encodeURIComponent(document.getElementById('username').value);
 			const encodedParams = new URLSearchParams();
 			encodedParams.append("my-url", `https://mk8dx-lounge.com/api/player?name=${username}`)
@@ -80,82 +81,84 @@
 			// Save in local storage? --> it works, but i dont understand why
 			// just did an extra function but tbh i dont need this lol
 			localSave(username);
-			/* var interval = setInterval(function () {
-				console.log('test');
-			},
-			10000); */
+			var interval = setInterval(function () {
+				//console.log('test');
+				fetch(url, options)
+				.then(response => response.json())
+				.then(data => {
+					const mmr = data.mmr;
+					// Standart Color
+					let Fontcolor = '#FFFFFF';
+					// Display rank icon, icon links from 150cc discord
+					// Iron
+					if(mmr < 2000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
+						Fontcolor = '#807878';
+					}
+					// Bronze
+					else if(mmr >= 2000 && mmr < 4000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
+						Fontcolor = '#a83808'
+					}
+
+					// Silver
+					else if(mmr >= 4000 && mmr < 6000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
+						Fontcolor = '#b5b5b7';
+					}
+					// Gold
+					else if(mmr >= 6000 && mmr < 8000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
+						Fontcolor = '#eab04e';
+					}
+					// Platin
+					else if(mmr >= 8000 && mmr < 10000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
+						Fontcolor = '#045263';
+					}
+					// Sapphire
+					else if(mmr >= 10000 && mmr < 12000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
+						Fontcolor = '#2a6cce';
+					}
+					// Ruby
+					else if(mmr >= 12000 && mmr < 14000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
+						Fontcolor = '#d31c5f';
+					}
+					// Diamond
+					else if(mmr >= 14000 && mmr < 16000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
+						Fontcolor = '#05a0c3';
+					}
+					// Master
+					else if(mmr >= 16000 && mmr < 17000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
+						Fontcolor = '#bdccda';
+					}
+					// Grandmaster
+					else if(mmr >= 17000) {
+						document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
+						Fontcolor = '#830c2c';
+					}
+					// if not found
+					else {
+						document.getElementById('mmr-rank').src = "https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless";
+						Fontcolor = 'white';
+					}
+
+					if (document.getElementById('custom-color').checked) {
+						document.getElementById('mmr-output').style.color = Fontcolor;
+					} else {
+						document.getElementById('mmr-output').style.color = '#ffffff';
+					}
+					document.getElementById('mmr-output').innerHTML = `${mmr}`;
+					console.log(mmr);
+				});
+				},
+			60*60*1000);
 			
-			fetch(url, options)
-			.then(response => response.json())
-			.then(data => {
-				const mmr = data.mmr;
-				// Standart Color
-				let Fontcolor = '#FFFFFF';
-				// Display rank icon, icon links from 150cc discord
-				// Iron
-				if(mmr < 2000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579735544430703.webp?size=240&quality=lossless';
-					Fontcolor = '#807878';
-				}
-				// Bronze
-				else if(mmr >= 2000 && mmr < 4000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579759712010320.webp?size=240&quality=lossless';
-					Fontcolor = '#a83808'
-				}
-
-				// Silver
-				else if(mmr >= 4000 && mmr < 6000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579781828575243.webp?size=240&quality=lossless';
-					Fontcolor = '#b5b5b7';
-				}
-				// Gold
-				else if(mmr >= 6000 && mmr < 8000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579798111125594.webp?size=240&quality=lossless';
-					Fontcolor = '#eab04e';
-				}
-				// Platin
-				else if(mmr >= 8000 && mmr < 10000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/542204444302114826.webp?size=240&quality=lossless';
-					Fontcolor = '#045263';
-				}
-				// Sapphire
-				else if(mmr >= 10000 && mmr < 12000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579851802411068.webp?size=240&quality=lossless';
-					Fontcolor = '#2a6cce';
-				}
-				// Ruby
-				else if(mmr >= 12000 && mmr < 14000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/1053874483880005663.webp?size=240&quality=lossless';
-					Fontcolor = '#d31c5f';
-				}
-				// Diamond
-				else if(mmr >= 14000 && mmr < 16000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579813386780722.webp?size=240&quality=lossless';
-					Fontcolor = '#05a0c3';
-				}
-				// Master
-				else if(mmr >= 16000 && mmr < 17000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731597294914502737.webp?size=240&quality=lossless';
-					Fontcolor = '#bdccda';
-				}
-				// Grandmaster
-				else if(mmr >= 17000) {
-					document.getElementById('mmr-rank').src = 'https://cdn.discordapp.com/emojis/731579876846338161.webp?size=240&quality=lossless';
-					Fontcolor = '#830c2c';
-				}
-				// if not found
-				else {
-					document.getElementById('mmr-rank').src = "https://cdn.discordapp.com/emojis/776179743091195935.webp?size=240&quality=lossless";
-					Fontcolor = 'white';
-				}
-
-				if (document.getElementById('custom-color').checked) {
-					document.getElementById('mmr-output').style.color = Fontcolor;
-				} else {
-					document.getElementById('mmr-output').style.color = '#ffffff';
-				}
-				document.getElementById('mmr-output').innerHTML = `${mmr}`;
-			});
+			
 			
 		}
 		
